switch back to 1.8.8 API for more version support